# getting-started-with-bazel

./: README.md
.github/workflows/: linux-build-exercises.yml
exercises/01-hello-world/: instructions.md
exercises/01-hello-world/solution/: solution.md
exercises/02-java-binary/: instructions.md  solution.md
exercises/02-java-binary/solution/: BUILD  solution.md
exercises/03-ide-support/: instructions.md
exercises/03-ide-support/solution/: solution.md
exercises/04-java-dependency/: instructions.md
exercises/04-java-dependency/solution/: BUILD  WORKSPACE  solution.md
exercises/04-java-package-dependency/: instructions.md
exercises/04-java-package-dependency/solution/: solution.md
exercises/05-java-external-dependency/: instructions.md
exercises/05-java-external-dependency/solution/: WORKSPACE  solution.md
exercises/05-java-test/: instructions.md
exercises/06-java-library-publish/: instructions.md
exercises/06-java-test/: instructions.md
exercises/06-java-test/solution/: MODULE.bazel  WORKSPACE  solution.md
exercises/06-remote-execution/: instructions.md
exercises/07-continuous-integration/: instructions.md
exercises/07-java-library-publish/: instructions.md
exercises/07-java-library-publish/solution/: MODULE.bazel  WORKSPACE  solution.md
exercises/07-java-library-publish/solution/src/main/java/com/bmuschko/app/config/: BUILD
exercises/08-continuous-integration/: instructions.md
exercises/08-genrule/: instructions.md
exercises/09-continuous-integration/: instructions.md
prerequisites/: instructions.md
(+15 files in other folders)
